fix: [IT] Increase z-index due to dailydeal overlapping arrows

--- a/src/components/_slider/navigation/mixin.scss
+++ b/src/components/_slider/navigation/mixin.scss
@@ -18,7 +18,7 @@ $trigger-icon_height: 2.7rem !default;
 
 @mixin slider-navigation() {
     position: absolute;
-    z-index: 3;
+    z-index: 11;
     top: 50%;
     transform: translate3d(0, -50%, 0);
     display: flex;
